--- a/index.css
+++ b/index.css
@@ -4,18 +4,18 @@
     /* color: #333; */
     /* height: 450px; */
     /* margin: 8% ; */
-    
-    background-color: rgba(255, 255, 255, 0.1);
-    backdrop-filter: blur(10px); 
-    border-radius: 8px;
-    padding: 12%;
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.005); 
 
-    
+    background-color: rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(10px);
+    border-radius: 8px;
+    padding: 8%;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.005);
+
+
 }
 
 body {
-    background-image: url("https://img.freepik.com/free-photo/colorful-bubble-art-frame-white-background-diy-experimental-art_53876-124743.jpg") ;
+    background-image: url("https://img.freepik.com/free-photo/colorful-bubble-art-frame-white-background-diy-experimental-art_53876-124743.jpg");
     background-size: cover;
 }
 
@@ -25,19 +25,19 @@ body {
 }
 
 .App-header h1 {
-    font-size: 4.5em;
+    font-size: 7.5em;
     margin: 0;
     color: #00024A;
     font-weight: bold;
 }
 
 .App-header p {
-    font-size: 1.2em;
+    font-size: 2.0em;
     color: #6c757d;
 }
 
 main {
-    padding: 50px 20px;
+    /* padding: 50px 20px; */
 }
 
 form {
@@ -46,7 +46,7 @@ form {
 }
 
 input[type="email"] {
-    padding: 10px;
+    padding: 20px;
     font-size: 1em;
     border: 1px solid #ced4da;
     border-radius: 4px;
@@ -63,6 +63,7 @@ button {
     border-radius: 4px;
     cursor: pointer;
     transition: box-shadow 0.3s ease-in-out;
+    padding: 20px;
 }
 
 button:hover {
@@ -118,4 +119,83 @@ main::after {
     max-width: fit-content;
     margin-left: auto;
     margin-right: auto;
+}
+
+#submitButton.loading {
+    cursor: not-allowed;
+    opacity: 0.6;
+}
+
+#submitButton.loading::after {
+    content: '...';
+    animation: ellipsis 1s infinite;
+}
+
+@keyframes ellipsis {
+    0% {
+        content: '...';
+    }
+
+    33% {
+        content: '.';
+    }
+
+    66% {
+        content: '..';
+    }
+
+    100% {
+        content: '...';
+    }
+}
+
+.hidden {
+    display: none;
+  }
+
+@media (max-width: 480px) {
+    .App-header h1 {
+        font-size: 3.5em;
+        margin: 0;
+        color: #00024A;
+        font-weight: bold;
+    }
+
+    .App-header p {
+        font-size: 1em;
+        color: #6c757d;
+        /* padding: 0 20px; */
+    }
+
+    button {
+        margin-top: 20px;
+    }
+
+    .App {
+        padding: 0;
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+
+        background-color: rgba(255, 255, 255, 0.7);
+        backdrop-filter: blur(5px);
+        border-radius: 8px;
+        box-shadow: 0 8px 16px rgba(0, 0, 0, 0.005);
+    }
+
+    .logo {
+        width: 80px;
+        height: auto;
+        margin-bottom: 20px;
+        max-width: fit-content;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    input[type="email"]::placeholder {
+        text-align: center;
+    }
+
+
 }
