--- a/index.css
+++ b/index.css
@@ -149,6 +149,10 @@ main::after {
     }
 }
 
+.hidden {
+    display: none;
+}
+
 @media (max-width: 480px) {
     .App-header h1 {
         font-size: 3.5em;
